[package]
name = "pico"
version = "0.1.0"
edition = "2021"
authors = ["Kristian Pilegaard Jensen <kralle@gmail.com>"]
readme = "README.md"
keywords = ["task", "todo", "list", "project", "producitvity"]
documentation = "https://github.com/kralle333/pico"
homepage = "https://github.com/kralle333/pico"
license = "MIT"

[dependencies]
clap = { version = "4.3.21", features=["cargo"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.104"}
inquire = { version = "0.6.2", features=["editor"]}
chrono = { version = "0.4.26"}
rand = {version = "0.8.5"}
owo-colors = "3.5.0"
gix-discover = "0.22.1"
