[package]
name = "piqo"
version = "0.1.1"
edition = "2021"
authors = ["Kristian Pilegaard Jensen <kralle@gmail.com>"]
description = "A easy to use tool for managing your tasks in a git repository project."
readme = "README.md"
keywords = ["task", "todo", "list", "project", "producitvity"]
documentation = "https://github.com/kralle333/piqo"
homepage = "https://github.com/kralle333/piqo"
license = "MIT"

[dependencies]
clap = { version = "4.3.21", features=["cargo"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.104"}
inquire = { version = "0.6.2", features=["editor", "date"]}
chrono = { version = "0.4.26"}
rand = {version = "0.8.5"}
owo-colors = "3.5.0"
gix-discover = "0.22.1"
